--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <div class="max-w-7xl mx-auto grid grid-cols-12 gap-4">
 
-  <!-- ================= โต๊ะ ================= -->
+  <!-- โต๊ะ -->
   <div class="col-span-3 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-3">🪑 โต๊ะ</h2>
     <div id="tableList" class="grid grid-cols-2 gap-2"></div>
   </div>
 
-  <!-- ================= เมนู ================= -->
+  <!-- เมนู -->
   <div class="col-span-5 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-2">📋 เมนู</h2>
 
@@ -32,7 +32,7 @@
     <div id="menuList" class="space-y-3"></div>
   </div>
 
-  <!-- ================= บิล ================= -->
+  <!-- บิล -->
   <div class="col-span-4 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-3">
       🧾 โต๊ะ <span id="currentTable">-</span>
@@ -46,7 +46,6 @@
         <span id="totalPrice">0 ฿</span>
       </div>
 
-      <!-- ปุ่มส่งออร์เดอร์ -->
       <button id="sendOrderBtn"
         class="w-full bg-green-600 py-2 rounded disabled:opacity-40"
         disabled>
@@ -63,254 +62,141 @@ const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co"
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
+/* ================= DOM (ต้องอยู่บนสุด) ================= */
+const tableList     = document.getElementById("tableList")
+const menuList      = document.getElementById("menuList")
+const orderItems    = document.getElementById("orderItems")
+const currentTable  = document.getElementById("currentTable")
+const totalPrice    = document.getElementById("totalPrice")
+
+const btnNoodle     = document.getElementById("btn-noodle")
+const btnDrink      = document.getElementById("btn-drink")
+const btnSnack      = document.getElementById("btn-snack")
+const sendOrderBtn  = document.getElementById("sendOrderBtn")
+
 /* ================= STATE ================= */
 let currentCategory = "ขนมจีน"
-
 let selectedTableId = null
-let selectedTableNo = null
-let currentOrderId = null
+let currentOrderId  = null
 
 let noodleMenus = []
 const restrictedMixTargets = ["แกงปู", "น้ำชุบหยำ"]
 
-/* ================= LOAD TABLES ================= */
+/* ================= TABLES ================= */
 async function loadTables() {
-  const { data, error } = await sb
-    .from("tables")
-    .select("*")
-    .order("table_no")
-
-  if (error) {
-    alert("โหลดโต๊ะไม่ได้")
-    console.error(error)
-    return
-  }
-
+  const { data } = await sb.from("tables").select("*").order("table_no")
   tableList.innerHTML = ""
 
-  data.forEach(t => {
+  ;(data || []).forEach(t => {
     const btn = document.createElement("button")
+    btn.className =
+      "p-2 rounded font-bold " +
+      (selectedTableId === t.id ? "bg-yellow-500" :
+       t.status === "occupied" ? "bg-red-600" : "bg-green-600")
 
-    let cls = "p-2 rounded font-bold "
-    if (selectedTableId === t.id) cls += "bg-yellow-500"
-    else if (t.status === "occupied") cls += "bg-red-600"
-    else cls += "bg-green-600"
-
-    btn.className = cls
     btn.textContent = "โต๊ะ " + t.table_no
     btn.onclick = () => selectTable(t)
-
     tableList.appendChild(btn)
   })
 }
 
-/* ================= SELECT TABLE ================= */
 function selectTable(t) {
   if (currentOrderId && selectedTableId !== t.id) {
-    alert("❌ โต๊ะนี้มีออร์เดอร์แล้ว ต้องจ่ายเงินก่อน")
+    alert("ต้องจ่ายเงินก่อน")
     return
   }
-
   selectedTableId = t.id
-  selectedTableNo = t.table_no
   currentTable.textContent = t.table_no
-
-  if (t.status === "occupied" && t.current_order_id) {
-    currentOrderId = t.current_order_id
-    loadOrderItems()
-  } else {
-    currentOrderId = null
-    orderItems.innerHTML = ""
-    totalPrice.textContent = "0 ฿"
-    sendOrderBtn.disabled = true
-  }
-
+  loadOrderItems()
   loadTables()
 }
 
 /* ================= CATEGORY ================= */
 function setCategory(cat) {
   currentCategory = cat
-
-  btnNoodle.className = "px-3 py-1 rounded bg-slate-600"
-  btnDrink.className  = "px-3 py-1 rounded bg-slate-600"
-  btnSnack.className  = "px-3 py-1 rounded bg-slate-600"
-
-  if (cat === "ขนมจีน") btnNoodle.className = "px-3 py-1 rounded bg-orange-600"
-  if (cat === "เครื่องดื่ม") btnDrink.className = "px-3 py-1 rounded bg-blue-600"
-  if (cat === "ทานเล่น") btnSnack.className = "px-3 py-1 rounded bg-green-600"
-
   loadMenu()
 }
 
-/* ================= MIX RULE ================= */
-function getAllowedMixOptions(mainName) {
-  if (restrictedMixTargets.includes(mainName)) {
-    return noodleMenus.filter(n => n.name !== mainName)
-  }
-  return noodleMenus.filter(
-    n => !restrictedMixTargets.includes(n.name) && n.name !== mainName
-  )
-}
+btnNoodle.onclick = () => setCategory("ขนมจีน")
+btnDrink.onclick  = () => setCategory("เครื่องดื่ม")
+btnSnack.onclick  = () => setCategory("ทานเล่น")
 
-/* ================= LOAD MENU ================= */
+/* ================= MENU ================= */
 async function loadMenu() {
   const { data: products } = await sb
     .from("products")
     .select("*")
-    .eq("active", true)
     .eq("category", currentCategory)
-    .order("price")
 
-  const { data: noodles } = await sb
-    .from("products")
-    .select("*")
-    .eq("active", true)
-    .eq("category", "ขนมจีน")
-
-  noodleMenus = noodles || []
   menuList.innerHTML = ""
 
   ;(products || []).forEach(p => {
-    const card = document.createElement("div")
-    card.className = "bg-slate-700 p-3 rounded"
+    const div = document.createElement("div")
+    div.className = "bg-slate-700 p-3 rounded flex justify-between"
 
-    let options = ""
-    if (p.category === "ขนมจีน") {
-      options += `
-        <label class="block text-sm mt-2">
-          <input type="checkbox" id="sp_${p.id}"> พิเศษ (+10)
-        </label>
-      `
-      const mixes = getAllowedMixOptions(p.name)
-      if (mixes.length) {
-        options += `
-          <label class="block text-sm mt-1">
-            ผสม (+10)
-            <select id="mix_${p.id}" class="text-black ml-1">
-              <option value="">-- ไม่ผสม --</option>
-              ${mixes.map(m => `<option value="${m.id}">${m.name}</option>`).join("")}
-            </select>
-          </label>
-        `
-      }
-    }
-
-    card.innerHTML = `
-      <div class="flex justify-between items-center">
-        <div>
-          <div class="font-bold">${p.name}</div>
-          <div class="text-sm">${p.price} บาท</div>
-        </div>
-        <button class="add-btn bg-blue-600 px-4 py-2 rounded">
-          เพิ่ม
-        </button>
+    div.innerHTML = `
+      <div>
+        <div class="font-bold">${p.name}</div>
+        <div>${p.price} บาท</div>
       </div>
-      ${options}
+      <button class="bg-blue-600 px-4 rounded">เพิ่ม</button>
     `
 
-    card.querySelector(".add-btn").onclick = () => addItemDraft(p)
-
-    menuList.appendChild(card)
+    div.querySelector("button").onclick = () => addItemDraft(p)
+    menuList.appendChild(div)
   })
 }
 
-/* ================= ADD ITEM (DRAFT) ================= */
+/* ================= ORDER ================= */
 async function addItemDraft(p) {
   if (!selectedTableId) {
-    alert("กรุณาเลือกโต๊ะก่อน")
+    alert("เลือกโต๊ะก่อน")
     return
   }
 
-  // ถ้ายังไม่มี order ให้สร้างก่อน แต่ยังไม่ lock โต๊ะ
   if (!currentOrderId) {
-    const { data: order, error } = await sb
+    const { data } = await sb
       .from("orders")
       .insert({ table_id: selectedTableId })
       .select()
       .single()
-
-    if (error) {
-      alert("สร้างบิลไม่สำเร็จ")
-      console.error(error)
-      return
-    }
-
-    currentOrderId = order.id
+    currentOrderId = data.id
   }
 
-  const sp = document.getElementById("sp_" + p.id)?.checked || false
-  const mixId = document.getElementById("mix_" + p.id)?.value || null
-
-  let price = p.price
-  if (sp) price += 10
-  if (mixId) price += 10
-
-  const { error } = await sb
-    .from("order_items")
-    .insert({
-      order_id: currentOrderId,
-      product_id: p.id,
-      price,
-      option_special: sp,
-      option_mix: !!mixId,
-      mix_sauce_id: mixId,
-      status: "draft"
-    })
-
-  if (error) {
-    alert("เพิ่มสินค้าไม่สำเร็จ")
-    console.error(error)
-    return
-  }
+  await sb.from("order_items").insert({
+    order_id: currentOrderId,
+    product_id: p.id,
+    price: p.price,
+    status: "draft"
+  })
 
   loadOrderItems()
 }
 
-/* ================= LOAD ORDER ITEMS ================= */
 async function loadOrderItems() {
-  if (!currentOrderId) return
+  if (!currentOrderId) {
+    orderItems.innerHTML = ""
+    totalPrice.textContent = "0 ฿"
+    sendOrderBtn.disabled = true
+    return
+  }
 
   const { data } = await sb
     .from("order_items")
-    .select(`
-      id,
-      price,
-      status,
-      products(name),
-      mix:mix_sauce_id(name)
-    `)
+    .select("id, price, status, products(name)")
     .eq("order_id", currentOrderId)
-    .order("created_at")
 
   let total = 0
-  orderItems.innerHTML = ""
-
   let hasDraft = false
+  orderItems.innerHTML = ""
 
   ;(data || []).forEach(i => {
     total += i.price
     if (i.status === "draft") hasDraft = true
 
     const div = document.createElement("div")
-    div.className = "bg-slate-700 p-2 rounded text-sm flex justify-between items-center"
-
-    div.innerHTML = `
-      <span>
-        ${i.products.name}
-        ${i.mix ? `(ผสม ${i.mix.name})` : ""}
-        ${i.status === "draft" ? "<span class='text-yellow-400'>(draft)</span>" : ""}
-      </span>
-      ${i.status === "draft"
-        ? `<button class="text-red-400">ลบ</button>`
-        : ""
-      }
-    `
-
-    if (i.status === "draft") {
-      div.querySelector("button").onclick = () => deleteDraftItem(i.id)
-    }
-
+    div.className = "bg-slate-700 p-2 rounded text-sm"
+    div.textContent = `${i.products.name} (${i.status})`
     orderItems.appendChild(div)
   })
 
@@ -318,45 +204,22 @@ async function loadOrderItems() {
   sendOrderBtn.disabled = !hasDraft
 }
 
-/* ================= DELETE DRAFT ================= */
-async function deleteDraftItem(id) {
-  await sb.from("order_items").delete().eq("id", id)
-  loadOrderItems()
-}
-
 /* ================= SEND ORDER ================= */
 sendOrderBtn.onclick = async () => {
-  if (!currentOrderId) return
-
-  // เปลี่ยน draft → pending
   await sb.from("order_items")
     .update({ status: "pending" })
     .eq("order_id", currentOrderId)
     .eq("status", "draft")
 
-  // ล็อกโต๊ะ
   await sb.from("tables")
-    .update({
-      status: "occupied",
-      current_order_id: currentOrderId
-    })
+    .update({ status: "occupied", current_order_id: currentOrderId })
     .eq("id", selectedTableId)
 
-  sendOrderBtn.disabled = true
   loadTables()
   loadOrderItems()
 }
 
 /* ================= INIT ================= */
-const btnNoodle = document.getElementById("btn-noodle")
-const btnDrink  = document.getElementById("btn-drink")
-const btnSnack  = document.getElementById("btn-snack")
-const sendOrderBtn = document.getElementById("sendOrderBtn")
-
-btnNoodle.onclick = () => setCategory("ขนมจีน")
-btnDrink.onclick  = () => setCategory("เครื่องดื่ม")
-btnSnack.onclick  = () => setCategory("ทานเล่น")
-
 loadTables()
 loadMenu()
 </script>
